# example-conan-git-describe

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.py  library.cpp  library.h
